--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,12 @@
-languageCode = "en"
-defaultcontentlanguage = "en"
-title = "Murali's Musings"
-theme = "coder"
-
 baseURL = "https://www.suriar.net/"
-
-pygmentsstyle = "solarized-dark"
+defaultcontentlanguage = "en"
+languageCode = "en"
+paginate = 20
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
+pygmentsstyle = "solarized-dark"
+theme = "hugo-coder"
+title = "Murali's Musings"
 
 [[menu.main]]
     name = "Blog"
@@ -18,22 +17,37 @@ pygmentscodefencesguesssyntax = true
     weight = 2
     url = "about"
 
-paginate = 20
 
 [params]
   author = "Murali Suriar"
-  github = "msuriar"
-  twitter = "msuriar"
+  description = "Murali Suriar's personal website"
+  since = 2009
 
-# Social links
 [[params.social]]
     name = "Github"
+    icon = "fa fa-2x fa-github"
     weight = 1
     url = "https://github.com/msuriar/"
+
 [[params.social]]
     name = "Twitter"
+    icon = "fa fa-2x fa-twitter"
     weight = 2
     url = "https://twitter.com/msuriar/"
+
+[[params.social]]
+  name = "LinkedIn"
+  icon = "fa fa-2x fa-linkedin"
+  weight = 3
+  url = "https://www.linkedin.com/in/msuriar/"
+
+[[params.social]]
+  name = "RSS"
+  icon = "fa fa-2x fa-rss"
+  weight = 4
+  url = "https://suriar.net/index.xml"
+  rel = "alternate"
+  type = "application/rss+xml"
 
 [permalinks]
   post = "/:year/:month/:title"
