--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,13 @@
 baseURL = "https://www.suriar.net/"
-defaultcontentlanguage = "en"
+title = "Murali's Musings"
+theme = "coder"
 languageCode = "en"
+defaultContentLanguage = "en"
 paginate = 20
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 pygmentsstyle = "solarized-dark"
-theme = "coder"
-title = "Murali's Musings"
+enableEmoji = true
 
 [[menu.main]]
     name = "Blog"
@@ -17,17 +18,16 @@ title = "Murali's Musings"
     weight = 2
     url = "about"
 
-
-[taxonomies]
-  category = "categories"
-  series = "series"
-  tag = "tags"
-  author = "authors"
-
 [params]
   author = "Murali Suriar"
   description = "Murali Suriar's personal website"
   since = 2009
+
+[taxonomies]
+category = "categories"
+series = "series"
+tag = "tags"
+author = "authors"
 
 [[params.social]]
     name = "Github"
