--- a/config.toml
+++ b/config.toml
@@ -31,21 +31,28 @@ tag = "tags"
 author = "authors"
 
 [[params.social]]
-    name = "Github"
-    icon = "fa fa-2x fa-github"
-    weight = 1
-    url = "https://github.com/msuriar/"
+  name = "Github"
+  icon = "fa fa-2x fa-github"
+  weight = 1
+  url = "https://github.com/msuriar/"
 
 [[params.social]]
-    name = "Twitter"
-    icon = "fa fa-2x fa-twitter"
-    weight = 2
-    url = "https://twitter.com/msuriar/"
+  name = "Mastodon"
+  icon = "fa fa-2x fa-mastodon"
+  weight = 2
+  url = "https://mastodon.ie/@msuriar"
+  rel = "me"
+
+[[params.social]]
+  name = "Twitter"
+  icon = "fa fa-2x fa-twitter"
+  weight = 3
+  url = "https://twitter.com/msuriar/"
 
 [[params.social]]
   name = "LinkedIn"
   icon = "fa fa-2x fa-linkedin"
-  weight = 3
+  weight = 4
   url = "https://www.linkedin.com/in/msuriar/"
 
 [[params.social]]
